Bug 1813025 - Fix statusbar labels overflowing. r=Paenglab
Differential Revision: https://phabricator.services.mozilla.com/D168075

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/messenger.css
+++ b/mail/themes/shared/mail/messenger.css
@@ -1018,6 +1018,10 @@ statuspanel:not([label]) {
   -moz-box-align: end;
 }
 
+.statuspanel-label {
+  display: inline-block;
+}
+
 :root[lwt-tree] .statuspanel-label {
   background-color: var(--toolbar-field-background-color);
   color: var(--toolbar-field-color);
@@ -1059,6 +1063,7 @@ statuspanel:not([label]) {
 
 label.statusbarpanel {
   margin-block: 3px;
+  display: inline-block;
 }
 
 .statusbarpanel-progress {
